2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailView.m ([-isTrashingAllowed]): removed
	useless method.
	([-showMarkDeletedButton]): removed useless method.
	([-showTrashButton]): removed useless method.

	* SoObjects/Appointments/iCalEntityObject+SOGo.m
	([iCalEntityObject -userIsParticipant:user]): new proxy method
	that invoked isParticipant on self for each possible email
	addresses of the user passed as parameter.
	([iCalEntityObject -userIsOrganizer:user]): same as above.

	* SoObjects/Appointments/iCalEntityObject+SOGo.[hm]: new class
	extension module.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject
	-saveContentString:contentStringbaseVersion:baseVersion]): remove
	method since an event may not have an organizer.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-GETAction:localContext]): clarified method. Added support for
	content-type (thanks to Helge Hess).
	([SOGoObject -initWithName:_nameinContainer:_container]):
	initialize and retain the owner.
	([SOGoObject -davContentType]): returns "text/plain".

2007-05-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxObjectActions.m ([UIxObjectActions
	-addUserInAclsAction]): send an acl addition mail.
	([UIxObjectActions -removeUserFromAclsAction]): send an acl
	removal mail.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions
	-_realActionWithFolderName:folderDict]): handle the possible
	presence of the "mail-invitation" url parameter. If present, the
	user will be redirected to the relevant folder.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -fullEmail]): new proxy method.
	([SOGoUser -language]): new method that returns the user's
	preferred language, or the system's if none has been set yet.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -davURL]): new method
	that returns the full dav url to self.
	([SOGoObject -soURL]): same as above but for the so url (Web UI).
	([SOGoObject -soURLToBaseContainerForUser:uid]): new method that